data/derived/sp14/progs/unify/prog0540.ml.out
Characters 42-44:
  ex[0] && ex[_end];;
  ^^
Error: This expression has type char list
       This is not a function; it cannot be applied.
